syntax = "proto3";

package calc;
option go_package = "github.com/deadcode/fiddle/fiddle.gRPC/grpc-go/calc/proto";

message SumRequest {
    int32   first_number = 1;
    int32   second_number = 2;
}

message SumResponse {
    int32   result = 1;
}